--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigationen xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:grisha="http://schemas.android.com/sasacilodgvaqvssaqme?"
-    android:id="@+id/nav_graph">
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/splashFragment"
+    tools:ignore="InvalidNavigation">
 
     <fragment
         android:id="@+id/logInFragment"
@@ -44,4 +45,4 @@
             app:popUpToInclusive="true" />
     </fragment>
 
-</navigationen>
+</navigation>
